--- a/views/about.ejs
+++ b/views/about.ejs
@@ -34,7 +34,7 @@
         <div class="main-first">
           <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
           <div class="first-text">
-            <h1 class="montserrat" id="about">About Us</h1>
+            <h2 class="montserrat h1-big" id="about">About Us</h2>
             <p class="montserrat" id="light">Get to know more about the TANIKALA Voting System.</p>
           </div>
           <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
@@ -115,12 +115,15 @@
 
             <h3 class="light-yellow">What is Blockchain?</h3>
             <br />
-            Blockchain is a secure and transparent digital record that stores information in a way that cannot be changed or deleted. Unlike traditional systems that rely on a central authority, blockchain uses multiple computers working together to verify and store data, ensuring accuracy and
-            trust. The trust comes from the fact that no single individual or organization controls the data. Instead, it is distributed across a network of computers, where each one verifies the information to ensure consistency, thereby storing it accurately. If any discrepancies are detected, the
-            operation is rejected by the network, ensuring the integrity of the system.
+            <p>
+              Blockchain is a secure and transparent digital record that stores information in a way that cannot be changed or deleted. Unlike traditional systems that rely on a central authority, blockchain uses multiple computers working together to verify and store data, ensuring accuracy and
+              trust. The trust comes from the fact that no single individual or organization controls the data. Instead, it is distributed across a network of computers, where each one verifies the information to ensure consistency, thereby storing it accurately. If any discrepancies are detected,
+              the operation is rejected by the network, ensuring the integrity of the system.
+              <br />
+              <br />
+              In the context of voting systems, blockchain ensures that:
+            </p>
             <br />
-            <br />
-            In the context of voting systems, blockchain ensures that: <br />
             <br />
             <ol>
               <li>Every vote is permanently recorded, making it impossible to change or delete.</li>
@@ -227,7 +230,7 @@
       <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
-        <a href="admin_login.html"> here.</a>
+        <a href="/admin-login"> here.</a>
       </div>
     </footer>
     <script src="js/index.js"></script>
