--- a/views/homepages/index-results-are-out-period.ejs
+++ b/views/homepages/index-results-are-out-period.ejs
@@ -64,7 +64,7 @@
       <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
-        <a href="admin_login.html"> here.</a>
+        <a href="/admin-login"> here.</a>
       </div>
     </footer>
     <script src="js/index.js"></script>
