--- a/public/css/index.css
+++ b/public/css/index.css
@@ -319,3 +319,45 @@ a {
   /* margin-top: 4%; */
   /* border: 1px solid black; */
 }
+
+h3 {
+  color: var(--color-lightYellow);
+  font-size: 1.5rem;
+}
+
+.header-nav-content a {
+  color: var(--color-lightYellow);
+}
+
+.header-nav-content {
+  gap: 4rem;
+}
+
+h1 {
+  font-size: 3.2rem;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.5rem;
+}
+
+/* h4 {
+  font-size: 
+} */
+
+/* h5 {
+  font-size:
+} */
+
+/* h6 {
+  font-size:
+} */
+
+.content-main p,
+li {
+  font-size: 1.3rem;
+}
