--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -17,9 +17,9 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
       <div class="header-bottom-line"></div>
@@ -85,7 +85,7 @@
       <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
-        <a href="admin_login.html"> here.</a>
+        <a href="/admin-login"> here.</a>
       </div>
     </footer>
     <script src="js/index.js"></script>
